--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body{background:#fefefe; font:normal 13px/150% Arial, Helvetica, sans-serif;colo
 
 #contet_sobre {}
 .content_sobre_item {border:1px solid #e5e5e5; height:auto; float:left; width:100%; padding:15px; margin-top:5px; height:50px; overflow:hidden; background:url(assets/img/fundo_sobre.png) center no-repeat;}
-.content_sobre_item .titulo {width:90%; font-size:12px; padding:0; margin-bottom:10px; color:#000000;}
+.content_sobre_item .titulo {width:90% !important; font-size:12px !important; padding:0; margin-bottom:10px; color:#000000; padding:0 !important;}
 .content_sobre_item .texto {width:100%; float:left; padding:0; color:#6F6F6F; font-size:12px;}
 .content_sobre_item .mais {width:10%; float:left; text-align:center; height:20px; color:#000000; font-size:22px; font-weight:bold; margin-top:-2px; cursor:pointer;}
 
@@ -115,8 +115,8 @@ body{background:#fefefe; font:normal 13px/150% Arial, Helvetica, sans-serif;colo
 
 #content_parceiro {width:100%; height:auto; float:left; margin-top:20px; padding-left:0px;}
 .content_parceiro_box {width:25%; height:auto; float:left; border-right:2px solid #2065C2;}
-.content_parceiro_box .titulo {margin-left:0px; padding-left:0px;}
-.content_parceiro_box .texto {width:100%; float:left; padding:0; color:#6F6F6F; font-size:14px; margin-left:0px;}
+.content_parceiro_box .titulo {margin-left:0px !important; padding-left:0px !important;}
+.content_parceiro_box .texto {width:100% !important; float:left; padding:0; color:#6F6F6F; font-size:14px; margin-left:0px;}
 #content_parceiro_logo {width:75%; height:auto; float:left;}
 #content_parceiro_logo img {padding:5px 25px;}
 
