--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body{background:#fefefe; font:normal 13px/150% Arial, Helvetica, sans-serif;colo
 .content_noticias_data .data {font-size:16px; color:#000000; width:100%; text-align:center; float:left; font-weight:bold; padding-top:3px;}
 .content_noticias_comentario {width:10%; float:left; margin-top:15px; font-size:9px; color:#d7d7d7; text-align:right;} 
 .content_noticias_item {margin:0; padding:20px 0; border-bottom:1px dashed #d9d9d9; height:auto; float:left;}
-.content_noticias_item .titulo {text-align:left; font-weight:bold; color:#000000; width:70%; float:left; font-size:13px; text-transform:none; margin:15px 0 0 0; padding:0;}
+.content_noticias_item .titulo {text-align:left; font-weight:bold; color:#000000; width:70% !important; float:left; font-size:13px; text-transform:none; margin:15px 0 0 0 !important; padding:0 !important;}
 .content_noticias_item .texto {text-align:left; color:#6F6F6F; width:80%; float:left; font-size:12px; margin-top:5px;}
 
 #contet_sobre {}
